--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ main {
   height: auto;
   line-height: normal;
   min-height: 50px;
+  background-color: #5182DA;
+  border-color: #5182DA;
 }
 
 h1 {
