--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ a:hover > img, a:focus > img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: stretch;
   margin: 0;
   white-space: normal;
   height: auto;
